--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -12,6 +12,9 @@ onlyBuiltDependencies:
 
 strictPeerDependencies: false
 
+overrides:
+  preact: ">=10.28.2"
+
 catalog:
   "@changesets/cli": 2.29.8
   "@commitlint/cli": 20.3.1
