fix: rollup vulnerability

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   "packageManager": "pnpm@10.30.3",
   "pnpm": {
     "overrides": {
-      "preact": ">=10.28.2"
+      "preact": ">=10.28.2",
+      "rollup": ">=4.59.0"
     }
   }
 }
